# aeroapply

./: .gitignore  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_application_ranking_debug.py  0003_genericize_persona_defaults.py
backlog/: created_issues.json  epics.md  issues.json  issues.md
config/: profile.example.yaml
config/profiles/: README.md  casey-ux.yaml  jordan-aipm.yaml  sam-dataeng.yaml
docs/: ARCHITECTURE.md  CALIBRATION.md  CONNECTORS.md  CREDENTIALS_AND_AUTOMATION.md  DATA_MODEL.md  HITL_AITL.md  LIFECYCLE_AND_EMAIL.md  MODEL_ROUTING.md  PEER_REVIEW.md  PRD.md  PROJECT_BRIEF.md  ROADMAP.md  SECURITY_COMPLIANCE.md  SOURCING_AND_RANKING.md  SPRINTS.md  TAILORING_AND_ATS.md  UI_UX.md
docs/adr/: ADR-000-template.md  ADR-001-orchestration-langgraph.md  ADR-002-backend-postgres-docker-railway.md  ADR-003-vector-store-pgvector.md  ADR-004-credential-encryption-fernet.md  ADR-005-async-asyncio-not-celery.md  ADR-006-ui-streamlit-then-nextjs.md  ADR-007-browser-automation-and-autonomy.md  ADR-008-candidate-side-submission-and-v1-autonomy.md
docs/internal/: notion-mirror.md  review-accuracy.md  review-completeness.md  review-consistency.md
infra/: .env.example  docker-compose.yml
project/: github-project.md
scripts/: bootstrap.sql  create_issues.py  setup_all.sh  setup_github_project.py  setup_labels.sh  setup_repo.sh
services/email_webhook/: app.py
src/aeroapply/: __init__.py  cli.py  config.py  embeddings.py
src/aeroapply/connectors/: base.py  greenhouse.py  registry.py
src/aeroapply/db/: repo.py
src/aeroapply/graph/: checkpoint.py  execution.py  routing.py  (+2 more)
tests/: test_bouncer.py  test_config.py  test_connectors_greenhouse.py  test_curation_events.py  test_db_integration.py  test_embeddings.py  test_execution_graph.py  test_geocoding.py  test_ingest.py  test_model_router.py  test_ranking.py  test_ranking_debug.py  test_routing.py  test_scheduler.py  test_ui_board.py  test_usage.py
(+12 files in other folders)
