[project]
name = "aeroapply"
version = "0.1.0"
description = "Autonomous, human-in-the-loop job-application daemon (LangGraph + Postgres/pgvector)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }

dependencies = [
    # Orchestration
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.0",
    # DB
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # Models / providers
    "anthropic>=0.40",
    "openai>=1.50",            # embeddings + OpenAI/DeepSeek-compatible endpoints
    # Web / email service
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12", # Mailgun posts multipart form fields
    "aiosmtplib>=3.0",
    # Browser automation
    "playwright>=1.48",
    # UI
    "streamlit>=1.39",
    # Utilities
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "cryptography>=43.0",      # Fernet credential encryption
    "geopy>=2.4",              # commute-distance geo fence
    "pyyaml>=6.0",
    "tenacity>=9.0",
    "structlog>=24.4",
]

[project.optional-dependencies]
local = ["ollama>=0.3"]        # local Llama for high-volume sourcing/classification
resilient = ["browser-use>=0.1"]  # optional resilient DOM automation

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "types-pyyaml",
]

[project.scripts]
aeroapply = "aeroapply.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aeroapply"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "services", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
